add event_user
